Definition Yaml Files/deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: mycontainer
          image: myimage:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /mnt/storage
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: my-pvc
      restartPolicy: Always
      nodeSelector:
        disktype: ssd
      tolerations:
        - key: "key1"
          operator: "Equal"
          value: "value1"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/e2e-az-name
                    operator: In
                    values:
                      - e2e-az1
                      - e2e-az2
      serviceAccountName: my-service-account
      imagePullSecrets:
        - name: myregistrykey
      hostNetwork: false
      dnsPolicy: Default
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      terminationGracePeriodSeconds: 30
