Definition Yaml Files/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
  type: ClusterIP
  sessionAffinity: None
  externalIPs:
    - 192.168.1.1
  loadBalancerIP: 1.2.3.4
  loadBalancerSourceRanges:
    - 0.0.0.0/0
  externalTrafficPolicy: Cluster
  healthCheckNodePort: 30001
  publishNotReadyAddresses: false
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  topologyKeys:
    - "kubernetes.io/hostname"
    - "failure-domain.beta.kubernetes.io/zone"
